--- a/hr-payroll/src/main/resources/application.properties
+++ b/hr-payroll/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.profiles.active=local
 spring.jpa.open-in-view=true
 server.port = 8101
 server.servlet.context-path=/PayrollApp
+
+hr-worker.host = http://localhost:8080/WorkerApp
